# VibeDev

./: .gitattributes  .gitignore  AUDIT_REPORT.md  AUDIT_SUMMARY.md  CLAUDE.md  CLAUDE_VERBOSE.md  COMPLETION_PLAN.md  COMPLETION_SUMMARY.md  CURRENT_STATE.md  DOCS_REFACTOR_PROMPT.md  HANDOFF_PROMPT.md  PRIORITIES.md  README.md  VIBEDEV_REPO_AUDIT.md  VibeDev doc3.md  VibeDev-doc2_ todo_done folder.md  launch-dashboard.bat  launch-dashboard.sh  pyproject.toml
.claude/: settings.local.json
.serena/: project.yml
PAPERS_EXTRACTED/: Agentic_Design_Patterns.md  code-agents-are-state-of-the-art-software-testers-2tu70fvdvt.md  core-llm-as-interpreter-for-natural-language-programming-40uc1np38x.md  flowbench-revisiting-and-benchmarking-workflow-guided-2891cdc8m8.md  how-to-understand-whole-software-repository-3tzgf7anb8.md  masai-modular-architecture-for-software-engineering-ai-izzxldfe5w.md  sankalp.bearblog.dev.md  swe-agent-agent-computer-interfaces-enable-automated-5cpgb7kq3z.md
docs/: 00_overview.md  02_step_canvas_spec.md  03_gates_and_evidence.md  04_flow_graph_and_loops.md  06_runner_autoprompt_spec.md  07_doc_map.md  NEXT_STEPS_PROMPT.md  TODO_GAP_ANALYSIS.md  TODO_QUICK_REFERENCE.md  gui_spec.md  roadmap.md  spec.md
scripts/: bootstrap.ps1  bootstrap.sh  verify.ps1  verify.sh
tests/: conftest.py  test_checkpoint_injection.py  test_cli.py  test_conductor.py  test_dependencies.py  test_e2e_workflow.py  test_evidence.py  test_execution.py  test_gates.py  test_gates_new.py  test_http_server.py  test_mcp_tools.py  test_new_features.py  test_planning.py  (+8 more)
(+138 files in other folders)
