[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibedev-mcp"
version = "0.1.0"
description = "VibeDev MCP server: a persistent process brain and prompt-chain conductor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.20.0",
  "mcp[cli]>=1.12.0",
  "pydantic>=2.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "pytest-asyncio>=1.3.0",
]

[project.scripts]
vibedev-mcp = "vibedev_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
